# easysql

./: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
electron/: main.js  main.ts  preload.js  preload.ts
release/: EasySQL Setup 1.0.0.exe.blockmap  EasySQL Setup 2.0.1.exe.blockmap  builder-debug.yml  builder-effective-config.yaml
scripts/: bump-version.js  generate-icons.js
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  config.rs  database.rs  main.rs  ssh.rs
src/components/: ConnectionModal.tsx  CreateDatabaseModal.tsx  CreateTableModal.tsx  InputDialog.tsx  MainContent.tsx  Sidebar.tsx  SqlEditor.tsx  TableDesigner.tsx  TitleBar.tsx  VirtualDataTable.tsx
src/lib/: electron-api.ts  hooks.ts  tauri-api.ts
